sensor api uses redis
